--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -20,7 +20,7 @@
         android:ems="10"
         android:fontFamily="monospace"
         android:inputType="textPersonName"
-        android:text="Money"
+        android:text="@string/money"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="22sp"
@@ -31,7 +31,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.047"
-        tools:ignore="TextViewEdits" />
+        tools:ignore="TextViewEdits,UnusedAttribute" />
 
     <ImageButton
         android:layout_width="55dp"
@@ -48,7 +48,9 @@
         app:layout_constraintLeft_toRightOf="@+id/textView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.04000002" />
+        app:layout_constraintVertical_bias="0.04000002"
+        android:contentDescription=""
+        tools:ignore="ContentDescription" />
 
 
 </android.support.constraint.ConstraintLayout>
