--- a/app/src/main/res/layout/setting_menu.xml
+++ b/app/src/main/res/layout/setting_menu.xml
@@ -9,11 +9,11 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="323dp"
-        android:layout_height="20dp"
+        android:layout_height="26dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
@@ -26,11 +26,11 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.822"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.42"
+        app:layout_constraintLeft_toLeftOf="@+id/textView4"
+        app:layout_constraintRight_toRightOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.81"
+        app:layout_constraintVertical_bias="0.814"
         tools:ignore="TextViewEdits,UnusedAttribute" />
 
     <TextView
@@ -45,6 +45,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:fontFamily="monospace"
+        android:gravity="left"
         android:inputType="textPersonName"
         android:text="@string/icon_credit"
         android:textAllCaps="false"
@@ -55,10 +56,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.673"
-        tools:ignore="TextViewEdits,UnusedAttribute"
-        android:gravity="left"
-        app:layout_constraintHorizontal_bias="0.822" />
+        app:layout_constraintVertical_bias="0.663"
+        tools:ignore="TextViewEdits,UnusedAttribute" />
 
     <TextView
         android:id="@+id/textView3"
