--- a/app/src/main/res/layout/decision_history.xml
+++ b/app/src/main/res/layout/decision_history.xml
@@ -30,6 +30,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.06999999"
-        tools:ignore="TextViewEdits,UnusedAttribute" />
+        tools:ignore="TextViewEdits,UnusedAttribute"
+        android:textColor="#ffffff" />
 
 </android.support.constraint.ConstraintLayout>
