--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -31,7 +31,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.06999999"
         tools:ignore="TextViewEdits,UnusedAttribute"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        />
 
     <android.support.percent.PercentRelativeLayout
         android:layout_width="fill_parent"
@@ -73,14 +74,14 @@
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:text="TextView"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    android:text="@string/monthly_expenses"/>
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="240dp"
-                    android:text="TextView"
+                    android:text="@string/loan_plan"
                     android:textColor="#ffffff" />
             </LinearLayout>
         </ScrollView>
