--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/content" >
+    android:id="@+id/content">
 
     <TextView
         android:id="@+id/textView"
@@ -34,8 +34,8 @@
         tools:ignore="TextViewEdits,UnusedAttribute" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="69dp"
+        android:id="@+id/money_counter"
+        android:layout_width="75dp"
         android:layout_height="29dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
