Fixed warnings and updated with new starting money

--- a/app/src/main/res/layout/decision_history.xml
+++ b/app/src/main/res/layout/decision_history.xml
@@ -77,7 +77,8 @@
             app:layout_constraintVertical_bias="0.909"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_gravity="center" >
+            android:layout_gravity="center"
+            tools:ignore="RtlHardcoded">
         <ScrollView
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -94,7 +95,8 @@
             android:layout_gravity="center"
             android:id="@+id/decisionScrollView"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent" >
+            android:layout_width="match_parent"
+            tools:ignore="ObsoleteLayoutParam,UselessParent">
 
             <LinearLayout
                 android:id="@+id/scrollLinear"
