--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -46,7 +46,7 @@
         android:ems="10"
         android:fontFamily="monospace"
         android:inputType="textPersonName"
-        android:text="$100"
+        android:text="@string/starting_money"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="24sp"
@@ -164,7 +164,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
                     android:onClick="answerButton2"
-                    android:text="Button"
+                    android:text="@string/button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.947"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -181,7 +181,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
                     android:onClick="answerButton1"
-                    android:text="Button"
+                    android:text="@string/button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.052"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -195,7 +195,7 @@
                     android:layout_height="250dp"
                     android:ems="10"
                     android:fontFamily="monospace"
-                    android:text="Hello world"
+                    android:text="@string/hello_world"
                     android:textColor="?attr/actionMenuTextColor"
                     android:textSize="21sp"
                     android:textStyle="bold"
@@ -207,7 +207,8 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="8dp"
-                    app:layout_constraintVertical_bias="0.19999999" />
+                    app:layout_constraintVertical_bias="0.19999999"
+                    tools:targetApi="jelly_bean" />
 
             </android.support.constraint.ConstraintLayout>
 
