--- a/app/src/main/res/layout/setting_menu.xml
+++ b/app/src/main/res/layout/setting_menu.xml
@@ -31,7 +31,7 @@
         app:layout_constraintRight_toRightOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.74"
-        tools:ignore="TextViewEdits,UnusedAttribute" />
+        tools:ignore="RtlHardcoded,TextViewEdits,UnusedAttribute" />
 
     <TextView
         android:id="@+id/textView6"
@@ -47,7 +47,7 @@
         android:fontFamily="monospace"
         android:gravity="left"
         android:inputType="textPersonName"
-        android:text="Under Apache License"
+        android:text="@string/under_apache_license"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="18sp"
@@ -58,7 +58,7 @@
         app:layout_constraintRight_toRightOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.868"
-        tools:ignore="TextViewEdits,UnusedAttribute" />
+        tools:ignore="RtlHardcoded,TextViewEdits,UnusedAttribute" />
 
     <TextView
         android:id="@+id/textView7"
@@ -74,7 +74,7 @@
         android:fontFamily="monospace"
         android:gravity="left"
         android:inputType="textPersonName"
-        android:text="SlidingMenu - J. Feinstein"
+        android:text="@string/slidingmenu_j_feinstein"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="18sp"
@@ -85,7 +85,7 @@
         app:layout_constraintRight_toRightOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.825"
-        tools:ignore="TextViewEdits,UnusedAttribute" />
+        tools:ignore="RtlHardcoded,TextViewEdits,UnusedAttribute" />
 
     <TextView
         android:id="@+id/textView4"
@@ -111,7 +111,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.663"
-        tools:ignore="TextViewEdits,UnusedAttribute" />
+        tools:ignore="RtlHardcoded,TextViewEdits,UnusedAttribute" />
 
     <TextView
         android:id="@+id/textView3"
@@ -205,6 +205,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.323"
-        tools:checked="true" />
+        tools:checked="true"
+        tools:targetApi="lollipop" />
 
 </android.support.constraint.ConstraintLayout>
